--- a/visualization_pt2.Rmd
+++ b/visualization_pt2.Rmd
@@ -185,7 +185,7 @@ ggp_temp_plot
 
 We used `discrete = TRUE` because the `color` aesthetic is mapped to a discrete variable. In other cases (for example, when color mapped to `prcp`) you can omit this argument to get a continuous color gradient. The `viridis::scale_fill_viridis()` function is appropriate for the `fill` aesthetic used in histograms, density plots, and elsewhere.
 
-## Themes
+### Themes
 
 Themes are used to modify non-data elements of a plot -- they don't change mappings or how data are render, but control things like background color and location of the the legend. Using themes can help with general plot appearance.
 
