--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploratory analysis using `group_by`"
+title: "Exploratory analysis using data summaries"
 output:
   html_document: 
     toc: true
@@ -28,7 +28,7 @@ options(tibble.print_min = 6)
 
 ### Learning Objectives
 
-Conduct exploratory analyses using `dplyr` verbs (group_by and summarize).
+Conduct exploratory analyses using `dplyr` verbs (`group_by` and `summarize`), along with numeric data summaries.
 
 ### Slide Deck
 
@@ -61,19 +61,22 @@ Conduct exploratory analyses using `dplyr` verbs (group_by and summarize).
 We'll continue in the same Git repo / R project that we used for visualization, and use essentially the same `weather_df` dataset -- the only exception is the addition of `month` variable, created using `lubridate::floor_date()`. 
 
 ```{r weather_data_create, cache = TRUE}
-weather_df = 
-  rnoaa::meteo_pull_monitors(c("USW00094728", "USC00519397", "USS0023B17S"),
-                      var = c("PRCP", "TMIN", "TMAX"), 
-                      date_min = "2017-01-01",
-                      date_max = "2017-12-31") %>%
+weather_df =  
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USC00519397", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
   mutate(
-    name = recode(id, USW00094728 = "CentralPark_NY", 
-                      USC00519397 = "Waikiki_HA",
-                      USS0023B17S = "Waterhole_WA"),
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
     tmin = tmin / 10,
     tmax = tmax / 10,
     month = lubridate::floor_date(date, unit = "month")) %>%
-  select(name, id, date, month, everything())
+  select(name, id, everything())
 ```
 
 ### `group_by`
@@ -96,16 +99,24 @@ As an intro to `summarize`, let's count the number of observations in each month
 ```{r}
 weather_df %>%
   group_by(month) %>%
-  summarize(n = n())
+  summarize(n_obs = n())
 ```
 
-The result is a dataframe that includes the grouping variable and the desired summary. 
-
-In this case, you could use `count()` in place of `group_by()` and `summarize()` if you remember that this function exists. I'll also make use of the `name` argument in count, which defaults to `"n"`. 
+We can group by more than one variable, too.
 
 ```{r}
 weather_df %>%
-  count(month, name = "n_days")
+  group_by(name, month) %>%
+  summarize(n_obs = n())
+```
+
+In both cases, the result is a dataframe that includes the grouping variable(s) and the desired summary. 
+
+To count things, you could use `count()` in place of `group_by()` and `summarize()` if you remember that this function exists. I'll also make use of the `name` argument in count, which defaults to `"n"`. 
+
+```{r}
+weather_df %>%
+  count(month, name = "n_obs")
 ```
 
 `count()` is a useful tidyverse alternative to Base R's `table` function. Both functions produce summaries of how often values appear, but `table`'s output is of class `table` and is hard to do any additional work with, while `count` produces a dataframe you can use or manipulate directly. For an example, run the code below and try to do something useful with the result...
@@ -185,6 +196,14 @@ weather_df %>%
     median_tmax = median(tmax))
 ```
 
+If you want to summarize multiple columns using the same summary, the `across` function is helpful.
+
+```{r}
+weather_df %>%
+  group_by(name, month) %>%
+  summarize(across(tmin:prcp, mean))
+```
+
 The fact that `summarize()` produces a dataframe is important (and consistent with other functions in the `tidyverse`). You can incorporate grouping and summarizing within broader analysis pipelines. For example, we can take create a plot based on the monthly summary: 
 
 ```{r}
@@ -218,7 +237,9 @@ Suppose you want to compare the daily max temperature to the annual average max 
 ```{r}
 weather_df %>%
   group_by(name) %>%
-  mutate(centered_tmax = tmax - mean(tmax)) %>% 
+  mutate(
+    mean_tmax = mean(tmax, na.rm = TRUE),
+    centered_tmax = tmax - mean_tmax) %>% 
   ggplot(aes(x = date, y = centered_tmax, color = name)) + 
     geom_point() 
 ```
@@ -239,6 +260,7 @@ weather_df %>%
 ```
 
 This sort of ranking is useful when filtering data based on rank. We could, for example, keep only the day with the lowest max temperature within each month:
+
 ```{r}
 weather_df %>%
   group_by(name, month) %>%
@@ -269,8 +291,9 @@ This kind of variable might be used to quantify the day-by-day variability in ma
 weather_df %>%
   group_by(name) %>%
   mutate(temp_change = tmax - lag(tmax)) %>%
-  summarize(temp_change_sd = sd(temp_change, na.rm = TRUE),
-            temp_change_max = max(temp_change, na.rm = TRUE))
+  summarize(
+    temp_change_sd = sd(temp_change, na.rm = TRUE),
+    temp_change_max = max(temp_change, na.rm = TRUE))
 ```
 
 
@@ -327,25 +350,24 @@ The code chunk below imports the litters and pups data, joins them, produces the
 
 ```{r, eval = FALSE}
 pup_data = 
-  read_csv("./data/FAS_pups.csv", col_types = "ciiiii") %>%
+  read_csv("./data/FAS_pups.csv") %>%
   janitor::clean_names() %>%
   mutate(sex = recode(sex, `1` = "male", `2` = "female")) 
 
 litter_data = 
-  read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  read_csv("./data/FAS_litters.csv") %>%
   janitor::clean_names() %>%
-  select(-pups_survive) %>%
-  separate(group, into = c("dose", "day_of_tx"), sep = 3) %>%
-  mutate(wt_gain = gd18_weight - gd0_weight,
-         day_of_tx = as.numeric(day_of_tx))
+  separate(group, into = c("dose", "day_of_tx"), sep = 3)
 
 fas_data = left_join(pup_data, litter_data, by = "litter_number") 
 
 fas_data %>% 
   group_by(dose, day_of_tx) %>% 
+  drop_na(dose) %>% 
   summarize(mean_pivot = mean(pd_pivot, na.rm = TRUE)) %>% 
-  filter(!is.na(dose)) %>% 
-  spread(key = dose, value = mean_pivot) %>% 
+  pivot_wider(
+    names_from = dose, 
+    values_from = mean_pivot) %>% 
   knitr::kable(digits = 3)
 ```
 
