--- a/visualization_pt2.Rmd
+++ b/visualization_pt2.Rmd
@@ -45,7 +45,7 @@ Create effective graphics using ggplot and implement best practices for effectiv
 
 <div class="vid_container">
   <iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/JglEg1vQLrI"
     frameborder="0" allowfullscreen class="video">
   </iframe>
 </div>
@@ -71,9 +71,11 @@ weather_df =
     date_min = "2017-01-01",
     date_max = "2017-12-31") %>%
   mutate(
-    name = recode(id, USW00094728 = "CentralPark_NY", 
-                      USC00519397 = "Waikiki_HA",
-                      USS0023B17S = "Waterhole_WA"),
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
     tmin = tmin / 10,
     tmax = tmax / 10) %>%
   select(name, id, everything())
