--- a/topic_visualization_and_eda.Rmd
+++ b/topic_visualization_and_eda.Rmd
@@ -10,4 +10,4 @@ The topic is made up of the following components:
 * [Visualization with `ggplot2` Pt. 2](visualization_pt2.html)
 * [Exploratory analysis using `group_by`](exploratory_analysis.html)
 
-The code that I produced working examples in lecture is [here]().
+The code that I produced working examples in lecture is [here](https://github.com/P8105/viz_and_eda).
