--- a/homework_and_projects.Rmd
+++ b/homework_and_projects.Rmd
@@ -13,14 +13,14 @@ In addition to grading for content, we reserve the right to deduct points for st
 
 |               | Available  | Due               | Assignment                                                | Solution                                                                   |
 |:------------- |:---------- |:----------------- | :--------------------------------------------------------:| :-------------------------------------------------------------------------:|
-| Homework 0    | Sept 8, 10am     | Sept 11, 10pm | [<i class="far fa-file-code fa-lg"></i>](homework_0.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
+| Homework 0    | Sept 8, 10am     | Sept 11, 10pm | [<i class="far fa-file-code fa-lg"></i>](homework_0.html) | [<i class="fas fa-check fa-lg"></i>]()                                 |
 | Homework 1    | Sept 10, 10am    | Sept 19, 10pm | [<i class="far fa-file-code fa-lg"></i>](homework_1.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw1_ajg2202.zip)    |
 | Homework 2    | Sept 21, 10am    | Sept 30, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_2.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw2_ajg2202.zip)    |
 | Homework 3    | Oct 1, 10am      | Oct 10, 10pm  | [<i class="far fa-file-code fa-lg"></i>](homework_3.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw3_ajg2202.zip)    |
-| Homework 4    | Oct 26, 10am     | Nov 4, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_4.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
+| Homework 4    | Oct 26, 10am     | Nov 4, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_4.html) | [<i class="fas fa-check fa-lg"></i>]()                                 |
 | Homework 5    | Nov 5, 10am     | Nov 18, 10pm  | [<i class="far fa-file-code fa-lg"></i>](homework_5.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw5_ajg2202.zip)    |
 | Homework 6    | Nov 19, 10am     | Dec 4, 10pm  | [<i class="far fa-file-code fa-lg"></i>](homework_6.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw6_ajg2202.zip)                                 |
-| Homework 7    | Dec 4, 10am     | Dec 11, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_7.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
+| Homework 7    | Dec 4, 10am     | Dec 11, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_7.html) | [<i class="fas fa-check fa-lg"></i>]()                                 |
 
 ### Midterm
 
