--- a/strings_and_factors.Rmd
+++ b/strings_and_factors.Rmd
@@ -10,17 +10,18 @@ Most of the tools we examined in [Data Wrangling I](topic_data_wrangling_i.html)
 
 This is the second module in the [Data Wrangling II](topic_data_wrangling_ii.html) topic.
 
-```{r, include = FALSE,message=FALSE,warning=FALSE}
+```{r, include = FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
-library(viridis)
 
 knitr::opts_chunk$set(
 	echo = TRUE,
 	warning = FALSE,
-	fig.width = 8, 
-  fig.height = 6,
+  fig.width = 6,
+  fig.asp = .6,
   out.width = "90%"
 )
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
 options(
   ggplot2.continuous.colour = "viridis",
@@ -29,8 +30,6 @@ options(
 
 scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
-
-theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
 ## Overview {.tabset .tabset-pills}
@@ -155,35 +154,33 @@ str_detect(string_vec, "\\[")
 
 There are a lot of other regular expression resources; we're really only scratching the surface. The stuff we have already will be useful and it's probably not worth going down the regex rabbit hole. That said, it's helpful to know what other functions exist in `stringr` -- you should at least know they exist even if you don't know exactly how they work right now! 
 
+### Thoughts on factors
 
-### PULSE data
+Factors are maybe the least intuitive of `R`'s data types. They are very useful, but they also do things you don't expect; this is especially bad when you have factors but think you have characters -- which happens more than you'd expect, because R uses factors a lot ([mostly for historical reasons](https://simplystatistics.org/2015/07/24/stringsasfactors-an-unauthorized-biography/)). Folks get pretty [riled](https://twitter.com/JennyBryan/status/630052228624068609/photo/1) [up](https://cran.r-project.org/web/packages/hellno/hellno.pdf) about factors.
 
-We'll start by revisiting a [dataset](./data/public_pulse_data.sas7bdat) we've seen a few times now. In [tidy data](tidy_data.html) we spent some time tidying the PULSE dataset; as part of that we used tools available to us at the time, but now we have some better tools. 
+Factors are the way to store categorical variables in R. They can take on specific levels (e.g. male and female) which are usually presented as characters but are, in fact, stored by R as integers. These integer values are used by functions throughout R -- in making plots, in organizing tables, in determining the "reference" category -- but most of the time are hidden by easier-to-read character string labels. This close relationship to strings, when in fact there is a lot of added structure, is why factors can be so confusing.
 
-The code below updates the data processing pipeline for the PULSE data using `stringr` and `forcats`. The result is the same, and the differences are pretty small, but this is a bit cleaner. 
+This is the kind of thing that can get you in trouble. 
 
 ```{r}
-pulse_data = 
-  haven::read_sas("./data/public_pulse_data.sas7bdat") %>%
-  janitor::clean_names() %>%
-  pivot_longer(
-    bdi_score_bl:bdi_score_12m,
-    names_to = "visit", 
-    names_prefix = "bdi_score_",
-    values_to = "bdi") %>%
-  select(id, visit, everything()) %>%
-  mutate(
-    visit = str_replace(visit, "bl", "00m"),
-    visit = fct_relevel(visit, str_c(c("00", "01", "06", "12"), "m"))) %>%
-  arrange(id, visit)
+vec_sex = factor(c("male", "male", "female", "female"))
+vec_sex
+as.numeric(vec_sex)
 
-print(pulse_data, n = 12)
+vec_sex = fct_relevel(vec_sex, "male")
+vec_sex
+as.numeric(vec_sex)
 ```
+
+The previous code also illustrates [_coersion_](http://r4ds.had.co.nz/vectors.html#coercion): forcing a variable from one type (e.g. factor) to another (e.g. numeric). Understanding how R coerces variables is important, because it sometimes happens unintentionally and can break your code or impact your analyses. 
+
+For this reason, it's important to be deliberate factors, particularly by using functions in [`forcats`](https://forcats.tidyverse.org).
+
 
 
 ### NSDUH
 
-Next we'll revisit the table scraped from the National Survey on Drug Use and Health data on [this page](http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm). In [reading data from the web](reading_data_from_the_web.html), we loaded this data using the code below, but noted it wasn't tidy. 
+We'll revisit the table scraped from the National Survey on Drug Use and Health data on [this page](http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm). In [reading data from the web](reading_data_from_the_web.html), we loaded this data using the code below, but noted it wasn't tidy. 
 
 ```{r}
 nsduh_url = "http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm"
@@ -232,123 +229,9 @@ data_marj %>%
     theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
-
-### Toothbrush reviews
-
-We were able to scrape Napoleon Dynamite reviews for a single review page in [reading data from the web](reading_data_from_the_web.html). If we want to scrape more reviews, it's necessary to construct the URLs for several review pages. This is possible based on an observation about the the structure of the URL for the [first page](https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber=1) of reviews -- it ended with `pageNumber=1` and, sure enough, changing this to `pageNumber=2` will bring up the [second page](https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber=1) of reviews. 
-
-```{r}
-url_base = "https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber="
-
-urls = str_c(url_base, 1:5)
-
-read_html(urls[1]) %>% 
-  html_nodes("#cm_cr-review_list .review-title") %>%
-  html_text()
-
-read_html(urls[2]) %>% 
-  html_nodes("#cm_cr-review_list .review-title") %>%
-  html_text()
-```
-
-It would get really tedious to try to scrape all (~1400) reviews by copying code over and over; before long we'll learn about writing R functions to reuse code and make this much easier!
-
-
-### Thoughts on factors
-
-Factors are maybe the least intuitive of `R`'s data types. They are very useful, but they also do things you don't expect; this is especially bad when you have factors but think you have characters -- which happens more than you'd expect, because R uses factors a lot ([mostly for historical reasons](https://simplystatistics.org/2015/07/24/stringsasfactors-an-unauthorized-biography/)). Folks get pretty [riled](https://twitter.com/JennyBryan/status/630052228624068609/photo/1) [up](https://cran.r-project.org/web/packages/hellno/hellno.pdf) about factors.
-
-Factors are the way to store categorical variables in R. They can take on specific levels (e.g. male and female) which are usually presented as characters but are, in fact, stored by R as integers. These integer values are used by functions throughout R -- in making plots, in organizing tables, in determining the "reference" category -- but most of the time are hidden by easier-to-read character strings. 
-
-This is the kind of thing that can get you in trouble. 
-
-```{r}
-vec_sex = factor(c("male", "male", "female", "female"))
-vec_sex
-as.numeric(vec_sex)
-
-vec_sex = relevel(vec_sex, ref = "male")
-vec_sex
-as.numeric(vec_sex)
-```
-
-The previous code also illustrates [_coersion_](http://r4ds.had.co.nz/vectors.html#coercion): forcing a variable from one type (e.g. factor) to another (e.g. numeric). Understanding how R coerces variables is important, because it sometimes happens unintentionally and can break your code or impact your analyses. 
-
-
-### Previous Factor Examples
-
-We've seen factors a few times already, especially in [Viz Pt 2](visualization_pt2.html). In that case, we were interested in reordering a factor variable in order to produce clearer plots -- `ggplot` uses factor levels to determine the order in which categories appear. Let's revisit those examples now. 
-
-Our first step is to load the data we used.
-
-```{r weather_data_create, cache = TRUE}
-weather_df = 
-  rnoaa::meteo_pull_monitors(
-    c("USW00094728", "USC00519397", "USS0023B17S"),
-    var = c("PRCP", "TMIN", "TMAX"), 
-    date_min = "2017-01-01",
-    date_max = "2017-12-31") %>%
-  mutate(
-    name = recode(id, USW00094728 = "CentralPark_NY", 
-                      USC00519397 = "Waikiki_HA",
-                      USS0023B17S = "Waterhole_WA"),
-    tmin = tmin / 10,
-    tmax = tmax / 10) %>%
-  select(name, id, everything())
-
-weather_df
-```
-
-Our first example reordered `name` "by hand" using `fct_relevel`:
-
-```{r}
-weather_df %>%
-  mutate(name = forcats::fct_relevel(name, c("Waikiki_HA", "CentralPark_NY", "Waterhole_WA"))) %>% 
-  ggplot(aes(x = name, y = tmax)) + 
-  geom_violin(aes(fill = name), color = "blue", alpha = .5) + 
-  theme(legend.position = "bottom")
-```
-
-A second example reordered `name` according to `tmax` values in each name using `fct_reorder`:
-
-```{r}
-weather_df %>%
-  mutate(name = forcats::fct_reorder(name, tmax)) %>% 
-  ggplot(aes(x = name, y = tmax)) + 
-  geom_violin(aes(fill = name), color = "blue", alpha = .5) + 
-  theme(legend.position = "bottom")
-```
-
-Although you may not have seen linear regression previously, the ordering of factor variables play an important in this case as well. Specifically, the ordering determines the "reference" category, and is something that can be adjusted as needed:
-
-```{r}
-weather_df %>%
-  lm(tmax ~ name, data = .)
-
-weather_df %>%
-  mutate(name = forcats::fct_relevel(name, c("Waikiki_HA", "CentralPark_NY", "Waterhole_WA"))) %>% 
-  lm(tmax ~ name, data = .)
-```
-
-We also saw factors in our exploratory analysis of the [Airbnb](dataset_airbnb.html) data, when looking at the distribution of prices in various neighborhoods. Ordering these according to the median price made for clearer plots than ordering neighborhoods alphabetically. 
-
-```{r}
-data("nyc_airbnb")
-
-nyc_airbnb %>%
-  filter(neighbourhood_group == "Manhattan") %>% 
-  mutate(
-    neighbourhood = fct_reorder(neighbourhood, price, na.rm = TRUE)) %>% 
-  ggplot(aes(x = neighbourhood, y = price)) +
-  geom_boxplot() +
-  coord_flip() + 
-  ylim(0, 1000)
-```
-
-
 ### Restaurant inspections
 
-As a final example of strings and factors, we'll take a look at the [NYC Restuarant Inspections](dataset_restaurant_inspections.html) data. Although we won't talk about this in detail now, it's worth mentioning that these data were collected using the NYC Open Data API; code is available with the data description.
+As a kind of involved example of strings and factors, we'll take a look at the [NYC Restuarant Inspections](dataset_restaurant_inspections.html) data. Although we won't talk about this in detail now, it's worth mentioning that these data were collected using the NYC Open Data API; code is available with the data description.
 
 First we'll import the data and take a look.
 
@@ -370,7 +253,7 @@ rest_inspec =
   mutate(boro = str_to_title(boro))
 ```
 
-Let's focus only on pizza places for now, and re-examine grades by boro.
+Let's focus only on pizza places for now, and re-examine grades by borough.
 
 ```{r}
 rest_inspec %>% 
@@ -409,22 +292,7 @@ rest_inspec %>%
   geom_bar() 
 ```
 
-Suppose I want to rename a boro; I'll try to do this using `replace`.
-
-```{r, warning = TRUE}
-rest_inspec %>% 
-  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
-  mutate(
-    boro = fct_infreq(boro),
-    boro = replace(boro, which(boro == "Brooklyn"), "HipsterHQ")) %>%
-  ggplot(aes(x = boro, fill = grade)) + 
-  geom_bar() + 
-  scale_fill_viridis(discrete = TRUE)
-```
-
-That didn't work at all! Factors have very specific values, trying to use a value that is not an existing factor level won't work. 
-
-Alternatively, I could try using `str_replace`.
+Suppose I want to rename a borough I could try using `str_replace`.
 
 ```{r}
 rest_inspec %>% 
@@ -436,7 +304,21 @@ rest_inspec %>%
   geom_bar() 
 ```
 
-This renamed the Borough, but then converted the result back to a string -- which, when plotted, was implicitly made a factor and ordered alphabetically. I could switch the order in which I rename and encode the factor order I want, but that might not always work. 
+This renamed the borough, but then converted the result back to a string -- which, when plotted, was implicitly made a factor and ordered alphabetically. I could switch the order in which I rename and encode the factor order I want, but that might not always work. 
+
+If I tried base R (maybe because I found some code online), I might try to do this using `replace`.
+
+```{r, warning = TRUE}
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    boro = replace(boro, which(boro == "Brooklyn"), "HipsterHQ")) %>%
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
+That didn't work at all! Factors have very specific values, trying to use a value that is not an existing factor level won't work. 
 
 Fortunately there is a dedicated function for renaming factor levels:
 
@@ -447,11 +329,112 @@ rest_inspec %>%
     boro = fct_infreq(boro),
     boro = fct_recode(boro, "HipsterHQ" = "Brooklyn")) %>%
   ggplot(aes(x = boro, fill = grade)) + 
-  geom_bar() + 
-  scale_fill_viridis(discrete = TRUE)
+  geom_bar()
 ```
 
 Success!
+
+
+### Weather data
+
+We saw factors in in [Viz Pt 2](visualization_pt2.html). In that case, we were interested in reordering a factor variable in order to produce clearer plots -- `ggplot` uses factor levels to determine the order in which categories appear. Let's revisit those examples now. 
+
+Our first step is to load the data we used.
+
+```{r weather_data_create, cache = TRUE}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USC00519397", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+
+weather_df
+```
+
+Our first example reordered `name` "by hand" using `fct_relevel`:
+
+```{r}
+weather_df %>%
+  mutate(name = forcats::fct_relevel(name, c("Waikiki_HA", "CentralPark_NY", "Waterhole_WA"))) %>% 
+  ggplot(aes(x = name, y = tmax)) + 
+  geom_violin(aes(fill = name), color = "blue", alpha = .5) + 
+  theme(legend.position = "bottom")
+```
+
+We could instead reorder `name` according to `tmax` values in each name using `fct_reorder`:
+
+```{r}
+weather_df %>%
+  mutate(name = forcats::fct_reorder(name, tmax)) %>% 
+  ggplot(aes(x = name, y = tmax)) + 
+  geom_violin(aes(fill = name), color = "blue", alpha = .5) + 
+  theme(legend.position = "bottom")
+```
+
+Although you may not have seen linear regression previously, the ordering of factor variables play an important in this case as well. Specifically, the ordering determines the "reference" category, and is something that can be adjusted as needed. 
+
+```{r}
+weather_df %>%
+  lm(tmax ~ name, data = .)
+
+weather_df %>%
+  mutate(name = forcats::fct_relevel(name, c("Waikiki_HA", "CentralPark_NY", "Waterhole_WA"))) %>% 
+  lm(tmax ~ name, data = .)
+```
+
+In this example, we're also using a feature of `%>%` that allows us to specify where the tibble goes: `.` is a placeholder for the result of the preceding call. 
+
+### PULSE data
+
+Let's revisit a [dataset](./data/public_pulse_data.sas7bdat) we've seen a few times now. In [tidy data](tidy_data.html) we spent some time tidying the PULSE dataset. As part of that we used tools available to us at the time, but now we have some better tools. 
+
+The code below updates the data processing pipeline for the PULSE data using `stringr` and `forcats`. The result is the same, and the differences are pretty small, but this is a bit cleaner. 
+
+```{r}
+pulse_data = 
+  haven::read_sas("./data/public_pulse_data.sas7bdat") %>%
+  janitor::clean_names() %>%
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m,
+    names_to = "visit", 
+    names_prefix = "bdi_score_",
+    values_to = "bdi") %>%
+  select(id, visit, everything()) %>%
+  mutate(
+    visit = str_replace(visit, "bl", "00m"),
+    visit = fct_relevel(visit, str_c(c("00", "01", "06", "12"), "m"))) %>%
+  arrange(id, visit)
+
+print(pulse_data, n = 12)
+```
+
+
+### Airbnb
+
+We could also use factors in an exploratory analysis of the [Airbnb](dataset_airbnb.html) data, for example when looking at the distribution of prices in various neighborhoods. Ordering these according to the median price makes for clearer plots than ordering neighborhoods alphabetically. 
+
+```{r}
+data("nyc_airbnb")
+
+nyc_airbnb %>%
+  filter(neighbourhood_group == "Manhattan") %>% 
+  mutate(
+    neighbourhood = fct_reorder(neighbourhood, price, na.rm = TRUE)) %>% 
+  ggplot(aes(x = neighbourhood, y = price)) +
+  geom_boxplot() +
+  coord_flip() + 
+  ylim(0, 1000)
+```
 
 
 ## Other materials
