--- a/reading_data_from_the_web.Rmd
+++ b/reading_data_from_the_web.Rmd
@@ -12,7 +12,6 @@ This is the first module in the [Data Wrangling II](topic_data_wrangling_ii.html
 
 ```{r, include = FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
-library(viridis)
 
 knitr::opts_chunk$set(
 	echo = TRUE,
@@ -85,15 +84,15 @@ First, let's make sure we can load the data from the web.
 
 ```{r}
 url = "http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm"
-drug_use_xml = read_html(url)
+drug_use_html = read_html(url)
 
-drug_use_xml
+drug_use_html
 ```
 
 Doesn't look like much, but we're there. Rather than trying to grab something using a CSS selector, let's try our luck extracting the tables from the HTML.
 
 ```{r}
-drug_use_xml %>%
+drug_use_html %>%
   html_nodes(css = "table")
 ```
 
@@ -103,8 +102,9 @@ We're only focused on the first table for now, so let's get the contents from th
 
 ```{r}
 table_marj = 
-  (drug_use_xml %>% html_nodes(css = "table")) %>% 
-  .[[1]] %>%
+  drug_use_html %>% 
+  html_nodes(css = "table") %>% 
+  first() %>%
   html_table() 
 ```
 
@@ -112,8 +112,9 @@ I won't print the table here, but if you look at it you'll notice a problem: the
 
 ```{r}
 table_marj = 
-  (drug_use_xml %>% html_nodes(css = "table")) %>% 
-  .[[1]] %>%
+  drug_use_html %>% 
+  html_nodes(css = "table") %>% 
+  first() %>% 
   html_table() %>%
   slice(-1) %>% 
   as_tibble()
