--- a/reading_data_from_the_web.Rmd
+++ b/reading_data_from_the_web.Rmd
@@ -248,7 +248,7 @@ nyc_water =
 ```{r, eval = FALSE}
 brfss_smart2010 = 
   GET("https://chronicdata.cdc.gov/resource/acme-vg9e.csv",
-      query = list(`$limit` = 5000)) %>% 
+      query = list("$limit" = 5000)) %>% 
   content("parsed")
 ```
 
