new video links

--- a/making_websites.Rmd
+++ b/making_websites.Rmd
@@ -35,7 +35,7 @@ Publish a personal website using GitHub pages.
 
 <div class="vid_container">
   <iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/guTdeLfgLZU"
     frameborder="0" allowfullscreen class="video">
   </iframe>
 </div>
